# GschwindCpp

./: .gitignore  README.md
LE1/Exercise1/: CMakeLists.txt  input.txt  main.cpp  output.txt
LE1/exercise2/: CMakeLists.txt  main.cpp
LE1/exercise3/: CMakeLists.txt  main  main.cpp
LE1/exercise4/: CMakeLists.txt  main.cpp  rpn.cpp  rpn.h
LE1/exercise5/: CMakeLists.txt  main
LE2/exercise1/: main.cpp  pvector-char.txt  pvector-int.txt
LE2/exercise2/: main.cpp  solution.txt
LE2/exercise3/: CMakeLists.txt  Makefile  main  main.cpp  pv-fraction.txt  pv-int.txt  pvector.cpp  pvector.h  rpn.h
LE2/exercise4/: CMakeLists.txt  Makefile  main  main.cpp  playfield.h  steps.txt
LE2/exercise5/: main.cpp
LE3/exercise1/: main.cpp
LE3/exercise2/: CMakeLists.txt  main.cpp  persistence_traits.cpp  pv-double.txt  pvector.h
LE3/exercise3/: CMakeLists.txt  pvector.h
LE3/exercise4/: CMakeLists.txt  dict.txt  main  main.cpp  pv-complex.txt  rpn.cpp  rpn.h  text.txt  updated.txt
LE3/exercise5/: CMakeLists.txt  com_dom.cpp  computer.cpp  human.h  intel.h  main  main.cpp
LE4/exercise2/: main  main.cpp
LE4/exercise3/: main.cpp
LE4/exercise4/: main.cpp
LE4/exercise5/: main.cpp
LE5/exercise1/: CMakeLists.txt  text.txt
LE5/exercise2/: CMakeLists.txt  factory.cpp  factory.h  main.cpp  myPlayfield.h  playfield.h
LE5/exercise2/agents/: com_wrapper.cpp  com_wrapper.h  computer.cpp  computer.h  computer5.h  dominique.cpp  human.cpp  human.h  player.h
LE5/exercise4/: CMakeLists.txt
LE5/exercise5/: main  main.cpp
scratch/: main.cpp
test/: main.cpp
(+155 files in other folders)
